--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "styled-components": "^5.1.1",
     "typescript": "~3.7.2"
   },
+  "homepage": "https://otoru.github.io/TaskList",
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "predeploy": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx src --color",
     "format": "prettier --write 'src/**/*.{ts,tsx,scss,css,json}'"
   },
